# test_devop

./: README.md  ci.yml  pyproject.toml
src/: main.py
tests/: test_main.py
