[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-test-project"
version = "0.1.0"
description = "A test project for DevOps automation"
authors = [{name = "Test User", email = "test@example.com"}]
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.21.0", 
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "black>=22.0.0"
]

[tool.black]
line-length = 88
target-version = ['py38']